# Tax-Lien-Specialist

./: .env.example  .gitignore  Property Export Houston+Pre-Foreclosure (1).xlsx  Property Export Houston-Active-Cash-Buyers.xlsx  Property Export Senior%2FRetiring+Owners.xlsx  README.md  Real_Estate_Analysis_Equations_KB.xlsx  agent_protocol_and_tools (1).md  agi_layer_extensions_tax_lien_strategist.md  backend_api_specification.md  contact_export-All_Contacts.csv  contact_export-HoustonActiveCashBuyers.csv  contact_export-Houston_PreForeclosure.csv  contact_export-PMLHoustonSenior_Retiring_Owners.csv  diagram_suite_agi_agentic_system.md  docker-compose.yml  final_repo_structure_and_codex_prompt_FULL.md  level_3_deep_dive_deal_engine.md  reasoning_explorer_ui_design.md  reasoning_explorer_user_stories.md  system_architecture_diagram.md
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20241121_0001_initial_schema.py
backend/app/: main.py  worker.py
backend/app/ai/: __init__.py  openai_service.py
backend/app/api/: deps.py  router.py
backend/app/api/v1/: __init__.py  ai.py  router.py
backend/app/core/: config.py  logging.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  agent.py  analysis.py  embedding.py  enums.py  geography.py  lien.py  mixins.py  notification.py  portfolio.py  system.py  user.py
backend/app/schemas/: agent_tools.py  ai.py
docs/: agi_agentic_system_whitepaper.md  analytical_extensions_tax_lien_strategist.md  background_jobs_and_scheduling.md  (+13 more)
(+12 files in other folders)
